<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">WydarzeniaTekstowe</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="new_event">Create New Event</string>
    <string name="pending_event">View Events</string>
    <string name="sth_more">Something More</string>
    <string name="about">About</string>
    <string name="author_name">Robert Zagórski</string>
    <string name="project_classification">UTE Projekt</string>
    <string name="bihapi">BiHapi</string>
    <string name="create_new_event">Create New Event</string>
    <string name="create_new_event_name">Name:</string>
    <string name="create_new_event_name_hint">Please enter event name</string>
    <string name="create_new_event_date">Date:</string>
    <string name="create_new_event_date_hint">Please enter the date (mm-dd-yyyy)</string>
    <string name="create_new_event_hour">Hour:</string>
    <string name="create_new_event_hour_hint">Please enter starting hour (hh:mm)</string>
    <string name="create_new_event_include_text">Message:</string>
    <string name="create_new_event_include_text_hint">Please enter the message</string>
    <string name="create_new_event_people">Invite:</string>
    <string name="create_new_event_people_hint">Choose people to invite</string>
    <string name="create_new_event_notification_question">Send reminder</string>
    <string name="create_new_event_when_to_send">When:</string>
    <string name="create_new_event_when_to_send_hint">Please choose hour</string>
    <string name="create_new_event_place">Choose place</string>
    <string name="create_new_event_save_and_send">Save and send</string>
    <string name="create_new_event_sms">SMS</string>
    <string name="create_new_event_ussd">USSD</string>
    <string name="title_activity_about">About</string>
    <string name="title_activity_map">Map</string>
    <string name="dummy_button">No place selected</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- Contancts Strings -->
    <string name="activity_contacts_list">Contacts List</string>
    <string name="activity_contact_detail">Contact Detail</string>
    <string name="contacts_list_search_results_title">Contacts List Search for \"%s\"</string>
    <string name="app_description">This is a sample app, demonstrating use of the Android system Contacts Provider.</string>
    <string name="imageview_description">Contact Thumbnail</string>
    <string name="address_button_description">View Address</string>
    <string name="menu_search">Search</string>
    <string name="menu_add_contact">Add Contact</string>
    <string name="menu_edit_contact">Edit Contact</string>
    <string name="no_contacts">No Contacts Found</string>
    <string name="no_contact_selected">No Contact Selected</string>
    <string name="search_hint">Find contacts</string>
    <!--
         Used for the AlphabetIndexer in ContactsListFragment to provide quick navigation by
         alphabet using ListView fast scroll.
    -->
    <string name="alphabet">ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <!--
         When using ContactsContract.Contacts#CONTENT_FILTER_URI to search contacts, a match occurs
         when using a number of different fields, such as name, e-mail address, address, phone
         number, etc. When a match occurs that is not the name, there is currently no way to tell
         which other field was matched. This string is displayed in the secondary display text in
         ContactsListFragment when a search query match occurs that is not the display name.
    -->
    <string name="search_match_other">Matches Other Field</string>
    <string name="no_address">No addresses found</string>
    <string name="no_intent_found">No application found to handle this action</string>
    <string name="title_activity_incoming_events">Incoming Events</string>

</resources>
