<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:alignmentMode="alignMargins"
    android:background="#000000"
    android:columnCount="2"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:rowCount="2"
    tools:context="com.ute.bihapi.wydarzeniatekstowe.StartActivity" >

    <Button
        android:id="@+id/optionbutton4"
        style="@style/grid_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_margin="10dp"
        android:layout_row="1"
        android:background="@drawable/blue_button"
        android:text="@string/about" />

    <Button
        android:id="@+id/optionbutton1"
        style="@style/grid_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_margin="10dp"
        android:layout_row="0"
        android:background="@drawable/red_button"
        android:text="@string/new_event" />

    <Button
        android:id="@+id/optionbutton2"
        style="@style/grid_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_margin="0dp"
        android:layout_row="1"
        android:background="@drawable/orange_button"
        android:text="@string/pending_event" />

    <Button
        android:id="@+id/optionbutton3"
        style="@style/grid_button"
        android:layout_width="292dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_row="1"
        android:background="@drawable/green_button"
        android:text="@string/sth_more"
        android:visibility="gone" />

</GridLayout>